2005-07-19  Tommi Vainikainen  <thv@iki.fi>

	* config/XKeepsCrashing, config/Xsession.in, daemon/display.c,
	daemon/gdm.c, daemon/slave.c, docs/C/gdm.xml,
	gui/gdmXnestchooser.c, gui/gdmchooser.c, gui/gdmcomm.c,
	gui/gdmlogin.c, gui/gdmphotosetup.c, gui/gdmsetup.c,
	gui/gdmsetup.glade, gui/greeter/greeter.c,
	gui/greeter/greeter_session.c, gui/greeter/greeter_system.c:
	Cleanup terminology, and fix many strings. See bug #310453.
	Also fixes bug #308287. List of the most important string changes:
	machine -> computer
	program -> application or command
	superuser -> root
	gdm, Gdm -> GDM
	See the Language chapter in GNOME HIG for more information.

2005-07-14  Brian Cameron  <brian.cameron@sun.com>

	* daemon/getvt.c, daemon/gdm.c: Support 
	  DragonFly VT since it is the same as FreeBSD.
	  Patch provided by Joerg Sonnenberger
	  <joerg@bec.de>.  Fixes bug #310218.

2005-07-13  William Jon McCann  <mccann@jhu.edu>

	* gui/gdmphotosetup.c (main): Use new gstdio
	functions and set correct permission on .face.

2005-07-11  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Cleaned up configure file.
	* gui/gdmsession.c: Changed "Gnome" to "GNOME".

2005-06-30  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.8.0.1
	* NEWS, configure.in:  Updated for new release.

2005-06-30  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Corrected grammar.  Thanks
	  to Martin Petersen for noticing this.
	* gui/gdmlogin.c, gui/gdmsetup.c:  No longer
	  use C99 features that do not work with gcc
	  2.95, specifically do not declare variables
	  except at the beginning of a block.  Fixes
	  bug #309110, patch provied by Jens
	  Granseuer.
	* autgogen.sh: Add back USE_GNOME_MACROS2=1
	  It doesn't do anything if using GNOME 2.10
	  or later, but allows people using older
	  gnome-autogen.sh to build.

2005-06-22  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, vicious-extensions/Makefile.am,
	  daemon/Makefile.am, gui/Makefile.am, 