@@ -1,3 +1,8 @@
+2005-07-19  William Jon McCann  <mccann@jhu.edu>
+
+	* gui/gdmlogin.c (gdm_login_gui_init):
+	Use HIG style button layout.  Fixes #310549.
+
 2005-07-19  Tommi Vainikainen  <thv@iki.fi>
 
 	* config/XKeepsCrashing, config/Xsession.in, daemon/display.c,
